# wow-guild-client

./: .gitignore  package-lock.json  package.json
.github/workflows/: release.yml
frontend/: index.html  titlebar.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
